# php-spellcheck-ext

./: CMakeLists.txt  README.md  hunspell-ext.ini  php-spellcheck-ext.ini
include/: HunspellExt.hpp
include/php-spellcheck-ext/: HunspellExt.hpp  VoikkoExt.hpp
src/: HunspellExt.cpp  module.cpp
src/php-spellcheck-ext/: HunspellExt.cpp  VoikkoExt.cpp
